--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   splash_screen_view: ^3.0.0
+  provider: ^6.0.3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
