--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   splash_screen_view: ^3.0.0
   provider: ^6.0.3
   get: ^4.6.5
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
