--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,3 +42,7 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Roboto-Regular.ttf
+        - asset: fonts/Inter-Regular.ttf
+
+
