--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get: ^4.6.5
   flutter_svg: ^1.0.3
   flutter_rating_bar: ^4.0.1
+  google_maps_flutter: ^2.2.0
 
 dev_dependencies:
   flutter_test:
