--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_rating_bar: ^4.0.1
   google_maps_flutter: ^2.2.0
+  firebase_auth: ^3.8.0
+  firebase_core: ^1.22.0
+  cloud_firestore: ^3.4.7
 
 dev_dependencies:
   flutter_test:
