--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^1.22.0
   cloud_firestore: ^3.4.7
   modal_progress_hud: ^0.1.3
+  google_sign_in: ^5.4.1
 
 dev_dependencies:
   flutter_test:
