--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   google_sign_in: ^5.4.1
   flutter_facebook_auth: ^4.4.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
