--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   google_sign_in: ^5.4.1
   flutter_facebook_auth: ^4.4.1
   http: ^0.13.5
+  pay: ^1.0.11
+  flutter_paystack: ^1.0.5+1
 
 dev_dependencies:
   flutter_test:
