--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ dependencies:
   flutter_facebook_auth: ^4.4.1
   http: ^0.13.5
   pay: ^1.0.11
-  flutter_paystack: ^1.0.5+1
+  flutter_paystack:
+    git:
+      url: https://github.com/definitelyme/flutter_paystack.git
+      ref: a4a33c3dd0a12f46d655a2e63d11e9f20ba82d01
 
 dev_dependencies:
   flutter_test:
