--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@mipmap/ic_launcher">
        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
+       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDz-FceM_J5lDltH3ajwSHVDSVzt3Sm-xI"/>
 
        <activity android:name="com.facebook.FacebookActivity"
            android:configChanges=
