--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
     git:
       url: https://github.com/definitelyme/flutter_paystack.git
       ref: a4a33c3dd0a12f46d655a2e63d11e9f20ba82d01
+  geolocator: ^9.0.1
+  geocoding: ^2.0.5
+  flutter_google_places: ^0.3.0
+  flutter_typeahead: ^4.1.1
 
 dev_dependencies:
   flutter_test:
