--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
     git:
       url: https://github.com/definitelyme/flutter_paystack.git
       ref: a4a33c3dd0a12f46d655a2e63d11e9f20ba82d01
-  geolocator: ^9.0.1
+
   geocoding: ^2.0.5
   flutter_google_places: ^0.3.0
   flutter_typeahead: ^4.1.1
+  location: ^4.4.0
+  location_geocoder: ^1.0.5
 
 dev_dependencies:
   flutter_test:
