--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   location_geocoder: ^1.0.5
   firebase_storage: ^10.3.9
   image_picker: ^0.8.5+3
+  smooth_star_rating: ^1.1.1
 
 dev_dependencies:
   flutter_test:
