--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^10.3.9
   image_picker: ^0.8.5+3
   smooth_star_rating: ^1.1.1
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
