--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.5+3
   smooth_star_rating: ^1.1.1
   cached_network_image: ^3.2.1
+  firebase_analytics: ^9.3.8
 
 dev_dependencies:
   flutter_test:
